[gd_scene load_steps=8 format=3 uid="uid://bmbtqllw2ypjc"]

[ext_resource type="PackedScene" uid="uid://kg3x603pe2ss" path="res://EnemySheet.tscn" id="1_bdhe6"]
[ext_resource type="Script" path="res://Database/EnemyDatabase.gd" id="1_oki1l"]
[ext_resource type="FontFile" uid="uid://deqhew2apixpi" path="res://Fonts/GOTHICB.TTF" id="2_1phum"]
[ext_resource type="Theme" uid="uid://usptm04bxef0" path="res://Themes/FilteringSorting.tres" id="2_etg7m"]
[ext_resource type="PackedScene" uid="uid://t8owj6vh5x6r" path="res://Database/FilterOption.tscn" id="4_f6w0e"]
[ext_resource type="Theme" uid="uid://be3xj0wqsh8kv" path="res://Themes/FilterWindow.tres" id="5_ofgan"]
[ext_resource type="PackedScene" uid="uid://bvo7dlcc42sjo" path="res://Database/SizeFiltering.tscn" id="7_r2utg"]

[node name="EnemyDatabase" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oki1l")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.945098, 0.92549, 0.898039, 1)

[node name="Database" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="MarginContainer" type="MarginContainer" parent="Database"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.05
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 6

[node name="SortingFiltering" type="HBoxContainer" parent="Database/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_etg7m")
theme_override_constants/separation = 12

[node name="SortBy" type="Label" parent="Database/MarginContainer/SortingFiltering"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_1phum")
text = "Sort by:"

[node name="Button" type="Button" parent="Database/MarginContainer/SortingFiltering"]
layout_mode = 2
text = "Name"

[node name="Button2" type="Button" parent="Database/MarginContainer/SortingFiltering"]
layout_mode = 2
text = "Level"

[node name="Filters" type="Label" parent="Database/MarginContainer/SortingFiltering"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_1phum")
text = "Filters:"

[node name="NumbersFilterButton" parent="Database/MarginContainer/SortingFiltering" instance=ExtResource("4_f6w0e")]
layout_mode = 2
filter_name = "Numbers"

[node name="CreaturesFilterButton" parent="Database/MarginContainer/SortingFiltering" instance=ExtResource("4_f6w0e")]
visible = false
layout_mode = 2
filter_name = "Creature families"

[node name="RarityFilterButton" parent="Database/MarginContainer/SortingFiltering" instance=ExtResource("4_f6w0e")]
layout_mode = 2
filter_name = "Rarity"

[node name="SizeFilterButton" parent="Database/MarginContainer/SortingFiltering" instance=ExtResource("4_f6w0e")]
layout_mode = 2
filter_name = "Sizes"

[node name="SourceFilterButton" parent="Database/MarginContainer/SortingFiltering" instance=ExtResource("4_f6w0e")]
visible = false
layout_mode = 2
filter_name = "Sources"

[node name="SaveFilterButton" parent="Database/MarginContainer/SortingFiltering" instance=ExtResource("4_f6w0e")]
layout_mode = 2
filter_name = "Strongest / Weakest saves"

[node name="TraitFilterButton" parent="Database/MarginContainer/SortingFiltering" instance=ExtResource("4_f6w0e")]
layout_mode = 2
filter_name = "Traits"

[node name="ResetButton" type="Button" parent="Database/MarginContainer/SortingFiltering"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme = ExtResource("5_ofgan")
text = "Reset selection"

[node name="DatabaseSheets" type="HBoxContainer" parent="Database"]
layout_mode = 2
size_flags_vertical = 3

[node name="EnemyList" type="ItemList" parent="Database/DatabaseSheets"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EnemySheet" parent="Database/DatabaseSheets" instance=ExtResource("1_bdhe6")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.0

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
metadata/_edit_lock_ = true

[node name="SizeFilterMenu" parent="CenterContainer" instance=ExtResource("7_r2utg")]
visible = false
layout_mode = 2

[connection signal="pressed" from="Database/MarginContainer/SortingFiltering/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Database/MarginContainer/SortingFiltering/Button2" to="." method="_on_button_2_pressed"]
[connection signal="button_pressed" from="Database/MarginContainer/SortingFiltering/SizeFilterButton" to="." method="_on_size_filter_button_button_pressed"]
[connection signal="item_selected" from="Database/DatabaseSheets/EnemyList" to="." method="_on_enemy_list_item_selected"]
[connection signal="apply_filter" from="CenterContainer/SizeFilterMenu" to="." method="_on_size_filter_menu_apply_filter"]
